页面公共部分抽取和页面js加载配置

--- a/html/home/repass.html
+++ b/html/home/repass.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>学IT - 后台管理系统</title>
-    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="./assets/nprogress/nprogress.css">
-    <link rel="stylesheet" href="./less/index.css">
+    <!--通过php的include方法，当浏览器访问这个页面的时候，php就会把提取出去的公共html片段引入，然后返回给浏览器-->
+    <?php include($_SERVER['DOCUMENT_ROOT'].'/html/common/style.html')?>
 </head>
 <body>
     
@@ -169,9 +167,7 @@
         </div>
     </div>
 
-    <script src="./assets/jquery/jquery.min.js"></script>
-    <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="./assets/nprogress/nprogress.js"></script>
-    <script src="./js/common.js"></script>
+    <!--页面公共脚本  -->
+    <?php include($_SERVER['DOCUMENT_ROOT'].'/html/common/script.html')?>
 </body>
 </html>
