登录退出功能

--- a/html/home/login.html
+++ b/html/home/login.html
@@ -18,6 +18,7 @@
                     <span class="input-group-addon">
                         <i class="fa fa-user"></i>
                     </span>
+                    <!--原生form表单要添加name属性才会有值-->
                     <input name='tc_name' type="text" class="form-control" placeholder="用户名">
                 </div>
                 <div class="input-group input-group-lg">
