登录头像名字获取/课程管理下拉功能/讲师管理数据获取/loading实现

--- a/html/home/login.html
+++ b/html/home/login.html
@@ -31,6 +31,8 @@
             </form>
         </div>
     </div>
+    <!--页面lodaing公共部分-->
+    <?php include($_SERVER['DOCUMENT_ROOT'].'/html/common/loading.html')?>
     
     <!--页面公共脚本  -->
     <?php include($_SERVER['DOCUMENT_ROOT'].'/html/common/script.html')?>
