--- a/html/teacher/teacher_list.html
+++ b/html/teacher/teacher_list.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>学IT - 后台管理系统</title>
     <!--通过php的include方法，当浏览器访问这个页面的时候，php就会把提取出去的公共html片段引入，然后返回给浏览器-->
     <?php include($_SERVER['DOCUMENT_ROOT'].'/html/common/style.html')?>
 </head>
+
 <body>
-    
     <!--左侧导航-->
     <?php include($_SERVER['DOCUMENT_ROOT'].'/html/common/aside.html')?>
     <!-- 主体 -->
     <div class="main">
         <div class="container-fluid">
             <!--头部-->
-    <?php include($_SERVER['DOCUMENT_ROOT'].'/html/common/header.html')?>
+            <?php include($_SERVER['DOCUMENT_ROOT'].'/html/common/header.html')?>
             <!-- 讲师列表 -->
             <div class="body teacher-list">
                 <!-- 面包屑 -->
@@ -36,7 +37,7 @@
                             </div>
                         </form>
                     </div>
-                    <table class="table table-striped table-bordered table-hover">
+                    <table class=" table-teacher-list table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
                                 <th>编号</th>
@@ -45,10 +46,12 @@
                                 <th>年龄</th>
                                 <th>性别</th>
                                 <th>手机号码</th>
+                                <th>入职日期</th>
                                 <th>操作</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <!--调用模板生成讲师列表-->
+                        <!--<tbody>
                             <tr>
                                 <td>1</td>
                                 <td>赵玉川</td>
@@ -62,13 +65,12 @@
                                     <a href="javascript::" class="btn btn-warning btn-xs">注 销</a>
                                 </td>
                             </tr>
-                        </tbody>
+                        </tbody>-->
                     </table>
                 </div>
             </div>
         </div>
     </div>
-
     <!-- 模态框 添加课程 -->
     <div class="modal fade" id="teacherModal">
         <div class="modal-dialog" style="width: 750px;">
@@ -81,8 +83,10 @@
                     <table class="table table-bordered table-condensed">
                         <tbody>
                             <tr>
-                                <th>姓名:</th><td>赵玉川</td>
-                                <th>职位:</th><td colspan="3">讲师</td>
+                                <th>姓名:</th>
+                                <td>赵玉川</td>
+                                <th>职位:</th>
+                                <td colspan="3">讲师</td>
                                 <td rowspan="4" width="128">
                                     <div class="avatar">
                                         <img src="./images/default.png" alt="">
@@ -90,19 +94,26 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th>花名:</th><td>麻衣长老</td>
-                                <th>出生日期:</th><td colspan="3">2015-11-13</td>
+                                <th>花名:</th>
+                                <td>麻衣长老</td>
+                                <th>出生日期:</th>
+                                <td colspan="3">2015-11-13</td>
                             </tr>
                             <tr>
-                                <th>性别:</th><td>男</td>
-                                <th>出生日期:</th><td colspan="3">1985-05-25</td>
+                                <th>性别:</th>
+                                <td>男</td>
+                                <th>出生日期:</th>
+                                <td colspan="3">1985-05-25</td>
                             </tr>
                             <tr>
-                                <th>手机号码:</th><td colspan="2">13051524959</td>
-                                <th>邮箱:</th><td colspan="2">zhaoyuchuan@itcast.cn</td>
+                                <th>手机号码:</th>
+                                <td colspan="2">13051524959</td>
+                                <th>邮箱:</th>
+                                <td colspan="2">zhaoyuchuan@itcast.cn</td>
                             </tr>
                             <tr>
-                                <th>籍贯:</th><td colspan="6">河北省 保定市 曲阳县</td>
+                                <th>籍贯:</th>
+                                <td colspan="6">河北省 保定市 曲阳县</td>
                             </tr>
                             <tr>
                                 <td colspan="7">
@@ -119,8 +130,30 @@
             </div>
         </div>
     </div>
-
+    <!--讲师列表模板-->
+    <script id='teacher-list-tpl' type='text/tpl'>
+        <tbody>
+            {{each result as tcObj i}}
+            <tr>
+                <td>{{i+1}}</td>
+                <td>{{tcObj.tc_name}}}</td>
+                <td>{{tcObj.tc_roster}}}</td>
+                <td>{{tcObj.tc_birthday}}</td>
+                <!--从接口中可以看到0代表男，1代表女，所以要判断下-->
+                <td>{{tcObj.tc_gender===0?'男':'女'}}</td>
+                <td>{{tcObj.tc_cellphone}}</td>
+                <td>{{tcObj.tc_join_date}}</td>
+                <td>
+                    <a href="#teacherModal" data-toggle="modal" class="btn btn-info btn-xs">查 看</a>
+                    <a href="./teacher_add.html" class="btn btn-info btn-xs">编 辑</a>
+                    <a href="javascript::" class="btn btn-warning btn-xs">注 销</a>
+                </td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </script>
     <!--页面公共脚本  -->
     <?php include($_SERVER['DOCUMENT_ROOT'].'/html/common/script.html')?>
 </body>
+
 </html>
