--- a/html/home/settings.html
+++ b/html/home/settings.html
@@ -224,7 +224,7 @@
                         <div class="form-group">
                             <div class="col-xs-8">
                                 <a href="./course_add_step2.html" class="btn btn-success btn-sm pull-right">保 存</a>
-                                <a href="./repass.html" class="btn btn-link btn-sm pull-right">更改密码？</a>
+                                <a href="/html/home/repass.html" class="btn btn-link btn-sm pull-right">更改密码？</a>
                             </div>
                         </div>
                     </form>
