--- a/html/course/course_category_add.html
+++ b/html/course/course_category_add.html
@@ -22,7 +22,7 @@
                     <li class="active">课程分类</li>
                 </ol>
                 <div class="category-add">
-                    <form action="" class="form-horizontal">
+                    <!--<form action="" class="form-horizontal">
                         <div class="form-group">
                             <label for="" class="col-xs-4 control-label">名称</label>
                             <div class="col-xs-3">
@@ -61,14 +61,64 @@
                         </div>
                         <div class="form-group">
                             <div class="col-xs-8">
-                                <a href="./course_category.html" class="btn btn-success btn-sm pull-right">保存</a>
+                                <button type='submit' class="btn btn-success btn-sm pull-right">保存</button>
                             </div>                          
                         </div>
-                    </form>
+                    </form>-->
+                    <!--课程编辑的坑-->
                 </div>
             </div>
         </div>
     </div>
+
+    <!--课程编辑的模板-->
+    <script id='course-category-edit-tpl' type='text/tpl'>
+        <!--有id就用修改接口，没id就用添加接口-->
+        <form id='course-category-edit-form' action={{ cg_id?'/v6/category/modify':'/v6/category/add' }} method='post' class="form-horizontal">
+            <!--添加一个隐藏input用来记录id-->
+            <input type="hidden" name='cg_id' value='{{cg_id}}'>
+            <div class="form-group">
+                <label for="" class="col-xs-4 control-label">名称</label>
+                <div class="col-xs-3">
+                    <input type="text" name='cg_name' value= "{{ cg_name }}" class="form-control input-sm" placeholder="填写分类名称">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="" class="col-xs-4 control-label">从属分类</label>
+                <div class="col-xs-2">
+                    <select name="cg_pid" class="form-control input-sm"> <!--这个是顶级分类，select中看编辑的接口-->
+                        {{ each top as cg i }}
+           <!-- 判断当前编辑的分类pid是否等于当前遍历到的顶级分类id，如果是那么证明这个顶级分类是当前分类的父级，选中它 -->
+                        <option value="{{ cg.cg_id }}" {{ cg_pid == cg.cg_id? "selected": "" }}>{{ cg.cg_name }}</option>
+                        {{ /each }}
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="" class="col-xs-4 control-label">排序</label>
+                <div class="col-xs-1">
+                    <input name='cg_order' value='{{ cg_order }}' type="text" class="form-control input-sm" value="10">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="" class="col-xs-4 control-label">是否显示</label>
+                <div class="col-xs-3">
+                    <label class="checkbox-inline">
+                        <input type="radio" name='cg_is_hide' value='0' {{ cg_is_hide==0? 'checked':''}}> 是
+                    </label>
+                    <label class="checkbox-inline">
+                        <input type="radio" name='cg_is_hide' value='1' {{ cg_is_hide==0? '':'checked'}}> 否
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-xs-8">
+                    <button type='submit' class="btn btn-success btn-sm pull-right">保存</button>
+                </div>                          
+            </div>
+        </form>
+        
+    </script>
 
     <!--页面公共脚本  -->
     <?php include($_SERVER['DOCUMENT_ROOT'].'/html/common/script.html')?>
